# milk2meat

./: .dev.env.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  jest.config.js  jest.setup.js  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tasks.py  webpack.config.js
.github/: renovate.json
.github/workflows/: main.yml
docker/: README.md  docker-compose.dev.yml
docker/db/: Dockerfile  create.sql
milk2meat/: __init__.py  asgi.py  urls.py  wsgi.py
milk2meat/assets/__mocks__/: styleMock.js
milk2meat/assets/css/: editor.css  main.css
milk2meat/assets/js/: editor.js  form-enhancements.js  main.js  pdf-viewer.js
milk2meat/assets/js/book-form/: ajax-book-form.js  index.js
milk2meat/assets/js/note-form/: ajax-form.js  file-upload.js  index.js  tags-input.js
milk2meat/assets/js/tags/: list.js
milk2meat/auth/: apps.py  forms.py  turnstile.py  urls.py  views.py
milk2meat/auth/templates/auth/: login.html
milk2meat/auth/tests/: test_forms.py  test_turnstile.py  test_views.py
milk2meat/bible/: apps.py  factories.py  forms.py  models.py  urls.py  views.py
milk2meat/bible/management/commands/: populate_bible_books.py
milk2meat/bible/migrations/: 0001_initial.py
milk2meat/bible/templates/bible/: book_detail.html  book_edit.html  book_list.html
milk2meat/bible/tests/: test_book_ajax.py  test_book_form.py  test_book_model.py  test_book_views.py  test_populate_bible_books.py
milk2meat/core/: apps.py  factories.py  forms.py  models.py  search.py  storage.py  urls.py  views.py
milk2meat/core/management/commands/: create_demo_notes.py
milk2meat/core/migrations/: 0001_initial.py  0002_remove_moved_models.py
milk2meat/core/templates/core/: book_detail.html  book_edit.html  book_list.html  note_detail.html  note_form.html  note_list.html  search_results.html  tag_list.html
milk2meat/core/templatetags/: file_filters.py
milk2meat/core/tests/: test_book_form.py  test_create_demo_notes.py  test_models_integration.py  test_note_form.py  test_note_model.py  test_note_views.py  test_tag_search_views.py  test_utils.py
milk2meat/core/tests/books/: test_book_ajax.py  test_book_form.py  test_book_model.py  test_book_views.py
milk2meat/core/tests/management_commands/: test_populate_bible_books.py
milk2meat/core/tests/notes/: test_note_ajax.py  test_note_type_form.py  test_note_type_model.py  test_note_views.py
milk2meat/core/tests/storage/: test_storage.py  (+2 more)
milk2meat/core/utils/: constants.py  markdown.py  validators.py
milk2meat/core/views/: books.py  notes.py  search.py  tags.py
milk2meat/frontend/css/: main.css
milk2meat/frontend/js/: editor.js  editor.test.js  esv-integration.js  esv-integration.test.js  form-enhancements.test.js  main.test.js  pdf-viewer.test.js  syntax-highlight.js  test-utils.js  test-utils.test.js
milk2meat/home/: apps.py  views.py
milk2meat/home/tests/: test_views.py
milk2meat/notes/: apps.py  factories.py  forms.py  models.py  urls.py
milk2meat/notes/migrations/: 0001_initial.py  0002_add_book_references.py
milk2meat/notes/tests/: test_ajax.py  test_create_demo_notes.py  test_forms.py  test_models.py  test_views.py
milk2meat/notes/views/: notes.py  tags.py
milk2meat/settings/: base.py  dev.py  production.py  test.py
milk2meat/templates/: base.html  base_minimal.html
milk2meat/templates/components/: footer.html  messages.html  navbar.html
milk2meat/users/: apps.py  factories.py  forms.py  models.py
milk2meat/users/migrations/: 0001_initial.py
milk2meat/users/tests/: test_factories.py  test_models.py  test_users.py
(+29 files in other folders)
